create_yamls/exports/tsung-test/tsung-test-service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: tsung-test-nginx
  namespace: tsung-test
spec:
  selector:
    app: tsung-test-nginx
  ports:
  - port: 80
